--- a/web/index1.html
+++ b/web/index1.html
@@ -118,9 +118,9 @@
 
           <h3 class="TWO"><a href="/update-data">UPDATE DATA</a></h3>
           <br><br>
-          <!--
-          <h3 class="TWO"><a href="#">DELETE DATA</a></h3>
--->
+
+          <h3 class="TWO"><a href="/show">DELETE DATA</a></h3>
+
 
           <div>
             <p>&copy; 2022isha arora</p>
