--- a/web/add_data.html
+++ b/web/add_data.html
@@ -58,7 +58,7 @@
         </div>
           <div class="mb-3">
           <label>Disease:</label>
-          <input type="text" class="form-control" id="disease" placeholder="Enter your country" name="disease">
+          <input type="text" class="form-control" id="disease" placeholder="Enter your disease" name="disease">
         </div>
             <div class="mb-3 mt-3">
         <label class="form-label">Symptoms:</label>
