--- a/web/showdata.html
+++ b/web/showdata.html
@@ -364,7 +364,7 @@
 
 							<td> <a href="/update-data" class="edit" data-toggle="modal"><i class="material-icons"
 										data-toggle="tooltip" title="Edit">&#xE254;</i></a></td>
-							<td> <a href="#" class="delete" data-toggle="modal"><i
+							<td> <a href="/delete" class="delete" data-toggle="modal"><i
 										class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
 							</td>
 
