--- a/web/index1.html
+++ b/web/index1.html
@@ -116,7 +116,7 @@
           <h3 class="TWO"><a href="/show">VIEW DATA</a></h3>
           <br><br>
 
-          <h3 class="TWO"><a href="/update-data">UPDATE DATA</a></h3>
+          <h3 class="TWO"><a href="/updates">UPDATE DATA</a></h3>
           <br><br>
 
           <h3 class="TWO"><a href="/show">DELETE DATA</a></h3>
