--- a/web/editdata.html
+++ b/web/editdata.html
@@ -1,69 +1,72 @@
 <!DOCTYPE html>
-<html>
-<head>
-      <title>CMS App</title>
+<html lang="en">
+    <head>
+      <title>details</title>
+      <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
+    </head>
 
+    <div class="container-fluid p-5 bg-primary text-white text-center">
+      <h1>update your data</h1>
+      <p>Welcome, You can Log Health Data :)</p>
+    </div>
 
-<body>
+    <body>
 
-<div class="container mt-3">
+    <div class="container mt-3">
+      <h2>Menu</h2>
+      <p>Select an Option:</p>
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/show">View Health Logs</a>
+        </li>
+      </ul>
+    </div>
 
-  <div class="mt-4 p-5 bg-primary text-white rounded">
-    <h1>Customer Management Simplified</h1>
-    <p>Update Customer</p>
-  </div>
-
-    <form action="/update-data" method="post">
-
-
-
-
-
-       <div class="mb-3 mt-3">
+    <div class="container mt-3">
+      <h2>Add Health Data</h2>
+      <form action="/updates/{{key }}" method="POST">
+           <div class="mb-3 mt-3">
           <label>Name:</label>
-          <input type="text" class="form-control" id="name" value="{{row['name']}}"placeholder="Enter your name " name="name">
+          <input type="text" class="form-control" id="name" placeholder="Enter your name " name="name" value="{{name}}">
         </div>
         <div class="mb-3 mt-3">
           <label>Phone:</label>
-          <input type="text" class="form-control" id="phone"value="{{row['phone_no']}} "placeholder="Enter Phone Number" name="txtPhone">
+          <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number" name="txtPhone">
         </div>
         <div class="mb-3">
           <label>E-mail:</label>
-          <input type="text" class="form-control" id="mail"value="{{row['e_mail']}} "placeholder="Enter your mail - id" name="mail">
+          <input type="text" class="form-control" id="mail" placeholder="Enter your mail - id" name="mail">
         </div>
         <div class="mb-3 mt-3">
           <label>DOB:</label>
-          <input type="text" class="form-control" id="dob" value="{{row['date_of_birth']}}"placeholder="Enter Date-of-birth" name="dob">
+          <input type="text" class="form-control" id="dob" placeholder="Enter Date-of-birth" name="dob">
         </div>
         <div class="mb-3">
           <label>Gender:</label>
-          <input type="text" class="form-control" id="gender" value="{{row['gender']}}"placeholder="Enter gender" name="gender">
+          <input type="text" class="form-control" id="gender" placeholder="Enter gender" name="gender">
         </div>
         <div class="mb-3">
           <label>Country:</label>
-          <input type="text" class="form-control" id="country"value="{{row['country']}}" placeholder="Enter your country" name="country">
+          <input type="text" class="form-control" id="country" placeholder="Enter your country" name="country">
         </div>
           <div class="mb-3">
           <label>State</label>
-          <input type="text" class="form-control" id="state" value="{{row['state']}} "placeholder="Enter your state" name="state">
+          <input type="text" class="form-control" id="state" placeholder="Enter your state" name="state">
         </div>
           <div class="mb-3">
           <label>Disease:</label>
-          <input type="text" class="form-control" id="disease"  value="{{row['diseases']}}"placeholder="Enter your disease" name="disease">
+          <input type="text" class="form-control" id="disease" placeholder="Enter your disease" name="disease">
         </div>
             <div class="mb-3 mt-3">
         <label class="form-label">Symptoms:</label>
-            <textarea class="form-control" id="symptoms"  value="{{row['symptoms']}}" placeholder="Enter your symptoms" name="symptoms"></textarea>
+            <textarea class="form-control" id="symptoms"  placeholder="Enter your symptoms" name="symptoms"></textarea>
       </div>
+        <button type="update" class="btn btn-primary">update Health Data</button>
+      </form>
+    </div>
 
-    <button type="submit" class="btn btn-primary">UPDATE</button>
-</form>
-
-</div>
-
-</body>
+    </body>
 </html>
