--- a/web/showdata.html
+++ b/web/showdata.html
@@ -362,7 +362,7 @@
 							<td>{{row['symptoms']}}</td>
 
 
-							<td> <a href="/update-data" class="edit" data-toggle="modal"><i class="material-icons"
+							<td> <a href="/updates" class="edit" data-toggle="modal"><i class="material-icons"
 										data-toggle="tooltip" title="Edit">&#xE254;</i></a></td>
 							<td> <a href="/delete" class="delete" data-toggle="modal"><i
 										class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
