--- a/web/update_info.html
+++ b/web/update_info.html
@@ -358,7 +358,7 @@
 							<td>{{row[6]}}</td>
 							<td>{{row[7]}}</td>
 
-							<td> <a href="/updates" class="edit" data-toggle="modal"><i class="material-icons"
+							<td> <a href="/update" class="edit" data-toggle="modal"><i class="material-icons"
 										data-toggle="tooltip" title="Edit">&#xE254;</i></a></td>
 							<td> <a href="/delete" class="delete" data-toggle="modal"><i
 										class="material-icons" data-toggle="tooltip" title="Delete">&#xE872;</i></a>
