--- a/web/index1.html
+++ b/web/index1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Historical places</title>
+  <title>Health -Recoder</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Charm&display=swap" rel="stylesheet">
@@ -116,7 +116,7 @@
           <h3 class="TWO"><a href="/show">VIEW DATA</a></h3>
           <br><br>
 
-          <h3 class="TWO"><a href="/updates">UPDATE DATA</a></h3>
+          <h3 class="TWO"><a href="/show">UPDATE DATA</a></h3>
           <br><br>
 
           <h3 class="TWO"><a href="/show">DELETE DATA</a></h3>
