--- a/web/showdata.html
+++ b/web/showdata.html
@@ -325,8 +325,8 @@
 						<div class="col-xs-6">
 							<a href="/enterdata" class="btn btn-success" data-toggle="modal"><i
 									class="material-icons">&#xE147;</i> <span>Add New Data</span></a>
-							<a href="/deleteall" class="btn btn-danger" data-toggle="modal"><i
-									class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+<!--							<a href="/deleteall" class="btn btn-danger" data-toggle="modal"><i-->
+<!--									class="material-icons">&#xE15C;</i> <span>Delete</span></a>-->
 						</div>
 					</div>
 				</div>
