--- a/web/add_data.html
+++ b/web/add_data.html
@@ -8,7 +8,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     </head>
 
-    <div class="container-fluid p-5 bg-primary text-white text-center">
+    <div class="container-fluid p-5 bg-secondary text-white text-center">
       <h1>Fill in your details</h1>
       <p>Welcome, You can Log Health Data :)</p>
     </div>
@@ -18,10 +18,10 @@
     <div class="container mt-3">
       <h2>Menu</h2>
       <p>Select an Option:</p>
-      <ul class="nav">
-        <li class="nav-item">
+      <ul class="nav text-white">
+<!--        <li class= " bg-secondary" ,text="white", text="center">-->
           <a class="nav-link" href="/show">View Health Logs</a>
-        </li>
+<!--        </li>-->
       </ul>
     </div>
 
@@ -31,27 +31,30 @@
 
            <div class="mb-3 mt-3">
           <label>Name:</label>
-          <input type="text" class="form-control" id="name" placeholder="Enter your name " name="name">
+          <input type="text" class="form-control" id="name" placeholder="Enter your name " name="name" required>
         </div>
         <div class="mb-3 mt-3">
           <label>Phone:</label>
-          <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number" name="txtPhone">
+          <input type="text" class="form-control" id="phone" placeholder="Enter Phone Number" name="txtPhone" required>
         </div>
         <div class="mb-3">
           <label>E-mail:</label>
-          <input type="text" class="form-control" id="mail" placeholder="Enter your mail - id" name="mail">
+          <input type="email" class="form-control" id="mail" placeholder="Enter your mail - id" name="mail">
         </div>
         <div class="mb-3 mt-3">
           <label>DOB:</label>
-          <input type="text" class="form-control" id="dob" placeholder="Enter Date-of-birth" name="dob">
+          <input type="date" class="form-control" id="dob" placeholder="Enter Date-of-birth" name="dob">
         </div>
         <div class="mb-3">
           <label>Gender:</label>
-          <input type="text" class="form-control" id="gender" placeholder="Enter gender" name="gender">
+            <input type="radio" name="gender" id="option1" value="Female"> Female </input<br>
+<input type="radio" name="gender" id="option2" value="Male"> Male </input<br>
+<!--          <input type="text" class="form-control" id="gender" placeholder="Enter gender" name="gender">-->
         </div>
         <div class="mb-3">
           <label>Country:</label>
           <input type="text" class="form-control" id="country" placeholder="Enter your country" name="country">
+
         </div>
           <div class="mb-3">
           <label>State</label>
@@ -65,7 +68,7 @@
         <label class="form-label">Symptoms:</label>
             <textarea class="form-control" id="symptoms"  placeholder="Enter your symptoms" name="symptoms"></textarea>
       </div>
-        <button type="submit" class="btn btn-primary">Add Health Data</button>
+        <button type="submit" class="btn btn-secondary">Add Health Data</button>
       </form>
     </div>
 
